<b>Version 2.1.4:</b><br/><br/>
    &#8226; Fixed black loading screen and duplicates occuring from it<br/>
    &#8226; Toast bar shouldn't get stuck anymore<br/>
    &#8226; Internal browser updates<br/>
    &#8226; Some crash fixes<br/>
    &#8226; Translation updates<br/>
</br><br/>

<b>Version 2.1.3:</b><br/><br/>
    &#8226; Bug fixes for the clickable links<br/>
    &#8226; Change the background of the internal browser to match the theme<br/>
    &#8226; In-line previews for any direct image links<br/>
    &#8226; Crash fixes<br/>
</br><br/>

<b>Version 2.1.2:</b><br/><br/>
    &#8226; Fix showing muted mentions<br/>
    &#8226; Fixed pictures not showing correctly if they weren't loaded before opening the tweet<br/>
    &#8226; Crash fixes<br/>
</br><br/>

<b>Version 2.1.1:</b><br/><br/>
    &#8226; Feedback for link clicks<br/>
    &#8226; Better handling of clicks on pictures in a profile<br/>
    &#8226; Crash fixes<br/>
</br><br/>

<b>Version 2.1.0:</b><br/><br/>
    &#8226; Clickable links, mentions, and hashtags on the timeline<br/>
    &#8226; Crash fixes<br/>
    &#8226; Translation updates<br/>
</br><br/>

<b>Version 2.0.9:</b><br/><br/>
    &#8226; Option to show mentions for muted users<br/>
    &#8226; Rotating the screen on the main timelines will save the page you are on<br>
</br><br/>

<b>Version 2.0.8:</b><br/><br/>
    &#8226; Fixes for uploading images<br/>
    &#8226; Fix for the second accounts mentions notifications<br/>
    &#8226; Will now refresh the second accounts mentions by pulling to refresh on the mentions page (if that option is enabled)<br/>
    &#8226; Better duplicate prevention<br/>
    &#8226; More crash fixes<br/>
</br><br/>

<b>Version 2.0.7:</b><br/><br/>
    &#8226; Faster and more stable method for accessing and saving tweets<br/>
    &#8226; In-app browser background adjusts according to theme<br/>
    &#8226; Fixes for the Dashclock settings<br/>
    &#8226; Show position option for Dashclock<br/>