@@ -26,8 +26,6 @@
 -- For Release --
 
     - replying from the notification shade should include all names
-    - focus on the message edittext when creating a direct message if the text in the upper one isn't blank
-    - echo sounds when clicking an item on the timeline
     - turn the size of links up to 30
 
     Version 2.2.0
